--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -2,24 +2,72 @@
 .navbar-container {
   display: flex;
   flex-wrap: wrap;
-  height: 50px;
   padding: 25px;
   background: #2C3E50;
   color: whitesmoke;
   align-items: center;
   justify-content: space-between;
   font-size: 2em;
+  transition: ease all 0.3s;
+}
+
+.mobile-wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.icon-bar {
+  display: none;
+  width: 33px;
+  height: 4px;
+  margin: 5px;
+  position: relative;
+  background: whitesmoke;
+  border-radius: 3px;
+  z-index: 1;
+  transform-origin: 4px 0px;  
+  transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
+              background 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
+              opacity 0.55s ease;
+}
+
+.icon-bar > span:first-child {
+  transform-origin: 0% 0%;
+}
+
+.icon-bar > span:nth-last-child(2) {
+  transform-origin: 0% 100%;
+} 
+
+.hamburger-animation {
+  opacity: 1;
+  transform: rotate(45deg) translate(-2px, -1px);
+}
+
+.hamburger-animation > span:nth-last-child(3)
+{
+  opacity: 0;
+  transform: rotate(0deg) scale(0.2, 0.2);
+}
+
+.hamburger-animation > span:nth-last-child(2)
+{
+  opacity: 1;
+  transform: rotate(90deg) translate(0, -13px);
 }
 
 .nav-links {
   display: flex;
   flex-wrap: wrap;
 }
+
 .nav-links > a {
   color: whitesmoke;
   padding: 15px;
   font-weight: 700;
   text-transform: uppercase;
+  font-size: 0.8em;
 }
 
 .nav-links > a:link {
@@ -38,4 +86,31 @@
 .nav-links > a:active {
     text-decoration: none;
     color: whitesmoke;
+}
+
+.hide {
+  display: none;
+}
+
+@media all and (max-width: 769px) {
+  .navbar-container {
+    display: block;
+  }
+
+  .icon-bar {
+    display: flex;
+  }
+  
+  .nav-links {
+    flex-direction: column;
+  }
+
+  .nav-links > a {
+    padding-left: 0px;
+  }
+  
+  .my-name {
+    color: red;
+  }
+  
 }
