--- a/src/components/AboutMe.css
+++ b/src/components/AboutMe.css
@@ -1,15 +1,17 @@
 .about-me-container {
   display: flex;
   flex-direction: column;
+  justify-content: center;
   align-items: center;
   background: #18BC9C;
   color: whitesmoke;
+  height: 100vh;
 }
 
 .img {
   margin-top: 25px;
-  max-width: 55%;
-  height: auto;
+  width: 300px;
+  height: 300px;
   border-radius: 50%;
 }
 
