--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,7 @@
 @import url('https://fonts.googleapis.com/css?family=Raleway:300,700');
 
 body {
-  display: flex;
-  flex-direction: column;
+  display: block;
   margin: 0;
   padding: 0;
   font-family: 'Raleway', sans-serif;
