--- a/src/components/AboutMe.css
+++ b/src/components/AboutMe.css
@@ -1,4 +1,5 @@
 .about-me-container {
+  
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -9,7 +10,7 @@
 }
 
 .img {
-  margin-top: 25px;
+  margin: 25px;
   width: 300px;
   height: 300px;
   border-radius: 50%;
@@ -24,28 +25,35 @@ h2 {
 p {
   font-size: 1.6em;
   text-align: center;
+  line-height: 1.6em;
 }
 
 .wrapper{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   width: 45%;
 }
 
-.first {
+
+.header {
   margin-top: 25px;
-  text-align: start;
-}
-.second {
   text-align: center;
-}
-.third {
-  text-align: end;
 }
 
 @media all and (max-width: 769px) {
+  .about-me-container {
+    height: auto;
+  }
   .wrapper {
     width: auto;
     display: flex;
     flex-direction: column;
+    margin-top: 35px;
+  }
+
+  h2 {
+    font-size: 1.6em;
   }
 
   p {
