--- a/src/components/AboutMe.css
+++ b/src/components/AboutMe.css
@@ -22,7 +22,7 @@ h2 {
   margin: 0;
 }
 
-p {
+.paragraph {
   font-size: 1.6em;
   text-align: center;
   line-height: 1.6em;
@@ -32,7 +32,8 @@ p {
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 45%;
+  width: 60%;
+  height: calc(100vh - 300px);
 }
 
 
@@ -43,21 +44,29 @@ p {
 
 @media all and (max-width: 769px) {
   .about-me-container {
-    height: auto;
+    height: 100vh;
   }
   .wrapper {
     width: auto;
     display: flex;
     flex-direction: column;
     margin-top: 35px;
+    height: calc(100vh - 100px);
+  }
+
+  .img {
+    width: 200px;
+    height: 200px;
   }
 
   h2 {
     font-size: 1.6em;
   }
 
-  p {
+  .paragraph {
     font-size: 1.3em;
+    margin-left: 10px;
+    margin-right: 10px;
   }
   
 }
