--- a/src/components/AboutMe.css
+++ b/src/components/AboutMe.css
@@ -1,12 +1,17 @@
+h2 {
+  font-size: 2em;
+  font-weight: 300;
+  margin: 0;
+}
+
 .about-me-container {
-  
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   background: #18BC9C;
   color: whitesmoke;
-  height: 100vh;
+  padding-top: 100px;
 }
 
 .img {
@@ -14,12 +19,6 @@
   width: 300px;
   height: 300px;
   border-radius: 50%;
-}
-
-h2 {
-  font-size: 2em;
-  font-weight: 300;
-  margin: 0;
 }
 
 .paragraph {
@@ -32,8 +31,7 @@ h2 {
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 60%;
-  height: calc(100vh - 300px);
+  width: 70%;
 }
 
 
@@ -44,14 +42,15 @@ h2 {
 
 @media all and (max-width: 769px) {
   .about-me-container {
-    height: 100vh;
+    
+    padding-top: 10px;
   }
   .wrapper {
     width: auto;
     display: flex;
     flex-direction: column;
     margin-top: 35px;
-    height: calc(100vh - 100px);
+    height: auto;
   }
 
   .img {
@@ -65,6 +64,7 @@ h2 {
 
   .paragraph {
     font-size: 1.3em;
+    margin-top: 0;
     margin-left: 10px;
     margin-right: 10px;
   }
