--- a/src/components/PortfolioItem.css
+++ b/src/components/PortfolioItem.css
@@ -1,9 +1,34 @@
 .portfolio-item {
   margin: 0 0 15px;
-  background: pink;
+  cursor: pointer;
+  position: relative;
+}
+
+.overlay {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  height: 100%;
+  width: 100%;
+  opacity: 0;
+  transition: .5s ease;
+  background: #18BC9C;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.portfolio-item:hover .overlay {
+  opacity: 0.8;
 }
 
 .img-responsive {
   max-width: 100%;
   height: auto;
+}
+
+.fa {
+  color: whitesmoke;
 }
