--- a/src/components/PortfolioModal.css
+++ b/src/components/PortfolioModal.css
@@ -6,8 +6,8 @@
   width:100%;
   height:100%;
   z-index:1000;
-  
-  
+  overflow-y:scroll;
+  overflow-x:hidden;
 }
 
 .modal-body {
@@ -15,4 +15,8 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+}
+
+.hide-body-scroll {
+  overflow: hidden;
 }
