--- a/src/components/PortfolioModal.css
+++ b/src/components/PortfolioModal.css
@@ -29,3 +29,29 @@
   padding-right: 1em;
   cursor: pointer;
 }
+
+.btn-container {
+  padding: 2em;
+  display: flex;
+  justify-content: space-around;
+}
+
+.button {
+  font-size: 1.5em;
+  border-style: solid;
+  border-width: 1px;
+  border-radius: 5px;
+  color: black;
+  padding: .5em;
+  text-decoration: none;
+}
+
+.button:focus,
+.button:hover {
+  background-color: #18BC9C;
+  color: whitesmoke;
+}
+
+.fa-padding {
+  padding-right: 6px;
+}
