Add tech stack info in portfolio modal

--- a/src/components/PortfolioModal.css
+++ b/src/components/PortfolioModal.css
@@ -55,3 +55,14 @@
 .fa-padding {
   padding-right: 6px;
 }
+
+.tech-container {
+  font-size: 3em;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.tech-tag {
+  padding: 10px;
+}
