--- a/src/components/PortfolioModal.css
+++ b/src/components/PortfolioModal.css
@@ -19,6 +19,11 @@
   padding-left: 1em;
 }
 
+.modal-body > p {
+  line-height: 1.8em;
+  text-align: center;
+}
+
 .hide-body-scroll {
   overflow: hidden;
 }
